<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Documents</string>
    <string name="downloads_label">Downloads</string>
    <string name="title_open">Open from</string>
    <string name="title_save">Save to</string>
    <string name="menu_create_dir">New folder</string>
    <string name="menu_grid">Grid view</string>
    <string name="menu_list">List view</string>
    <string name="menu_sort">Sort by</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Storage settings</string>
    <string name="menu_open">Open</string>
    <string name="menu_save">Save</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_copy">Copy to\u2026</string>
    <string name="menu_move">Move to\u2026</string>
    <string name="menu_new_window">New window</string>
    <string name="menu_cut_to_clipboard">Cut</string>
    <string name="menu_copy_to_clipboard">Copy</string>
    <string name="menu_paste_from_clipboard">Paste</string>
    <string name="menu_advanced_show">Show internal storage</string>
    <string name="menu_advanced_hide">Hide internal storage</string>
    <string name="menu_file_size_show">Show file size</string>
    <string name="menu_file_size_hide">Hide file size</string>
    <string name="button_select">Select</string>
    <string name="button_copy">Copy</string>
    <string name="button_move">Move</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_retry">Try Again</string>
    <string name="sort_name">By name</string>
    <string name="sort_date">By date modified</string>
    <string name="sort_size">By size</string>
    <string name="drawer_open">Show roots</string>
    <string name="drawer_close">Hide roots</string>
    <string name="save_error">Failed to save document</string>
    <string name="create_error">Failed to create folder</string>
    <string name="query_error">Can\u2019t load content at the moment</string>
    <string name="root_recent">Recent</string>
    <string name="root_available_bytes"><xliff:g id="size" example="3GB">%1$s</xliff:g> free</string>
    <string name="root_type_service">Storage services</string>
    <string name="root_type_shortcut">Shortcuts</string>
    <string name="root_type_device">Devices</string>
    <string name="root_type_apps">More apps</string>
    <string name="empty">No items</string>
    <string name="no_results">No matches in %1$s</string>
    <string name="toast_no_application">Can\u2019t open file</string>
    <string name="toast_failed_delete">Unable to delete some documents</string>
    <string name="share_via">Share via</string>
    <string name="copy_notification_title">Copying files</string>
    <string name="move_notification_title">Moving files</string>
    <string name="delete_notification_title">Deleting files</string>
    <string name="copy_remaining"><xliff:g id="duration" example="3 minutes">%s</xliff:g> left</string>
    <plurals name="copy_begin">
        <item quantity="one">Copying <xliff:g id="count" example="1">%1$d</xliff:g> file.</item>
        <item quantity="other">Copying <xliff:g id="count" example="3">%1$d</xliff:g> files.</item>
    </plurals>
    <plurals name="move_begin">
        <item quantity="one">Moving <xliff:g id="count" example="1">%1$d</xliff:g> file.</item>
        <item quantity="other">Moving <xliff:g id="count" example="3">%1$d</xliff:g> files.</item>
    </plurals>
    <plurals name="deleting">
        <item quantity="one">Deleting <xliff:g id="count" example="1">%1$d</xliff:g> file.</item>
        <item quantity="other">Deleting <xliff:g id="count" example="3">%1$d</xliff:g> files.</item>
    </plurals>
    <string name="undo">Undo</string>
    <string name="copy_preparing">Preparing for copy\u2026</string>
    <string name="move_preparing">Preparing for move\u2026</string>
    <string name="delete_preparing">Preparing for delete\u2026</string>
    <string name="delete_progress"><xliff:g id="count" example="3">%1$d</xliff:g> / <xliff:g id="totalCount" example="5">%2$d</xliff:g></string>
    <plurals name="copy_error_notification_title">
        <item quantity="one">Couldn\u2019t copy <xliff:g id="count" example="1">%1$d</xliff:g> file</item>
        <item quantity="other">Couldn\u2019t copy <xliff:g id="count" example="2">%1$d</xliff:g> files</item>
    </plurals>
    <plurals name="move_error_notification_title">
        <item quantity="one">Couldn\u2019t move <xliff:g id="count" example="1">%1$d</xliff:g> file</item>
        <item quantity="other">Couldn\u2019t move <xliff:g id="count" example="2">%1$d</xliff:g> files</item>
    </plurals>
    <plurals name="delete_error_notification_title">
        <item quantity="one">Couldn\u2019t delete <xliff:g id="count" example="1">%1$d</xliff:g> file</item>
        <item quantity="other">Couldn\u2019t delete <xliff:g id="count" example="2">%1$d</xliff:g> files</item>
    </plurals>
    <string name="notification_touch_for_details">Tap to view details</string>
    <string name="close">Close</string>
    <string name="copy_failure_alert_content">These files weren\u2019t copied: <xliff:g id="list">%1$s</xliff:g></string>
    <string name="move_failure_alert_content">These files weren\u2019t moved: <xliff:g id="list">%1$s</xliff:g></string>
    <string name="delete_failure_alert_content">These files weren\u2019t deleted: <xliff:g id="list">%1$s</xliff:g></string>
    <string name="copy_converted_warning_content">These files were converted to another format: <xliff:g id="list" example="Document.pdf, Photo.jpg, Song.ogg">%1$s</xliff:g></string>
    <plurals name="clipboard_files_clipped">
        <item quantity="one">Copied <xliff:g id="count" example="1">%1$d</xliff:g> file to clipboard.</item>
        <item quantity="other">Copied <xliff:g id="count" example="3">%1$d</xliff:g> files to clipboard.</item>
    </plurals>
    <string name="clipboard_files_cannot_paste">Cannot paste the selected files in this location.</string>
    <string name="menu_rename">Rename</string>
    <string name="rename_error">Failed to rename document</string>
    <string name="menu_eject_root">Eject</string>
    <string name="notification_copy_files_converted_title">Some files were converted</string>
    <string name="open_external_dialog_request">Grant <xliff:g id="appName" example="System Settings"><b>^1</b></xliff:g>
        access to <xliff:g id="directory" example="Pictures"><i>^2</i></xliff:g> directory on
        <xliff:g id="storage" example="SD Card"><i>^3</i></xliff:g>?</string>
    <string name="open_external_dialog_request_primary_volume">Grant <xliff:g id="appName" example="System Settings"><b>^1</b></xliff:g>
        access to <xliff:g id="directory" example="Pictures"><i>^2</i></xliff:g> directory?</string>
    <string name="open_external_dialog_root_request">Grant <xliff:g id="appName" example="System Settings"><b>^1</b></xliff:g>
        access to your data, including photos and videos, on <xliff:g id="storage" example="SD Card"><i>^2</i></xliff:g>?</string>
    <string name="never_ask_again">Don\'t ask again</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <plurals name="elements_selected">
        <item quantity="one"><xliff:g id="count" example="1">%1$d</xliff:g> selected</item>
        <item quantity="other"><xliff:g id="count" example="3">%1$d</xliff:g> selected</item>
    </plurals>
    <plurals name="elements_dragged">
        <item quantity="one"><xliff:g id="count" example="1">%1$d</xliff:g> item</item>
        <item quantity="other"><xliff:g id="count" example="3">%1$d</xliff:g> items</item>
    </plurals>
    <string name="delete_filename_confirmation_message">Delete \"<xliff:g id="name" example="cat.jpg">%1$s</xliff:g>\"?</string>
    <string name="delete_foldername_confirmation_message">Delete folder \"<xliff:g id="name" example="Photos">%1$s</xliff:g>\" and its contents?</string>
    <plurals name="delete_files_confirmation_message">
        <item quantity="one">Delete <xliff:g id="count" example="1">%1$d</xliff:g> file?</item>
        <item quantity="other">Delete <xliff:g id="count" example="3">%1$d</xliff:g> files?</item>
    </plurals>
    <plurals name="delete_folders_confirmation_message">
        <item quantity="one">Delete <xliff:g id="count" example="1">%1$d</xliff:g> folder and its contents?</item>
        <item quantity="other">Delete <xliff:g id="count" example="3">%1$d</xliff:g> folders and their contents?</item>
    </plurals>
    <plurals name="delete_items_confirmation_message">
        <item quantity="one">Delete <xliff:g id="count" example="1">%1$d</xliff:g> item?</item>
        <item quantity="other">Delete <xliff:g id="count" example="3">%1$d</xliff:g> items?</item>
    </plurals>
</resources>