<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!-- showAsAction flag impacts the behavior of SearchView.
     When set to collapseActionView, collapsing SearchView to icon is the
     default behavior. It would fit UX, however after expanding SearchView is
     shown on the left site of the toolbar (replacing title). Since no way to
     prevent this behavior was found, the flag is set to always. SearchView is
     always visible by default and it is being collapse manually by calling
     setIconified() method
-->
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_menu_search"
        android:showAsAction="always"
        android:actionViewClass="android.widget.SearchView"
        android:imeOptions="actionSearch"
        android:visible="false" />
<!-- This group is being hidden when searching is in full bar mode-->
    <group android:id="@+id/group_hide_when_searching">
        <item
            android:id="@+id/menu_grid"
            android:title="@string/menu_grid"
            android:icon="@drawable/ic_menu_view_grid"
            android:showAsAction="always" />
        <item
            android:id="@+id/menu_list"
            android:title="@string/menu_list"
            android:icon="@drawable/ic_menu_view_list"
            android:showAsAction="always" />

        <item
            android:id="@+id/menu_new_window"
            android:title="@string/menu_new_window"
            android:alphabeticShortcut="n"
            android:showAsAction="never"
            android:visible="false" />
        <item
            android:id="@+id/menu_create_dir"
            android:title="@string/menu_create_dir"
            android:icon="@drawable/ic_menu_new_folder"
            android:alphabeticShortcut="e"
            android:showAsAction="never"
            android:visible="false" />
        <item
            android:id="@+id/menu_paste_from_clipboard"
            android:title="@string/menu_paste_from_clipboard"
            android:alphabeticShortcut="v"
            android:showAsAction="never"
            android:visible="false" />
        <!-- Copy action is defined in mode_directory.xml -->
        <item
            android:id="@+id/menu_sort"
            android:title="@string/menu_sort"
            android:icon="@drawable/ic_menu_sortby"
            android:showAsAction="ifRoom">
            <menu>
                <item
                    android:id="@+id/menu_sort_name"
                    android:title="@string/sort_name" />
                <item
                    android:id="@+id/menu_sort_date"
                    android:title="@string/sort_date" />
                <item
                    android:id="@+id/menu_sort_size"
                    android:title="@string/sort_size" />
            </menu>
        </item>
        <item
            android:id="@+id/menu_file_size"
            android:showAsAction="never"
            android:visible="false" />
        <item
            android:id="@+id/menu_advanced"
            android:showAsAction="never"
            android:visible="false" />
        <item
            android:id="@+id/menu_settings"
            android:title="@string/menu_settings"
            android:showAsAction="never"
            android:visible="false" />
    </group>
</menu>
